# MLops-Youtube-Sentiment-Insights

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  dvc.yaml  lgbm_model.pkl  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py  tfidf_vectorizer.pkl
.github/workflows/: cicd.yaml
Notebook/: 1_Preprocessing_&_EDA.ipynb  2_experiment_1_baseline_model.ipynb  3_experiment_2_bow_tfidf.ipynb  4_experiment_3_tfidf_(1,3)_max_features.ipynb  5_experiment_4_handling_imbalanced_data.ipynb  6_experiment_5_xgboost_with_hpt.ipynb  8_stacking.ipynb
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  model_registry.py
yt-chrome-plugin-frontend/: manifest.json  popup.js
