[project]
name = "mlops-youtube-sentiment-insights"
version = "0.1.0"
description = "MLOps pipeline for YouTube Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.10" 
authors = [{name = "Yoosuf", email = "yoosuf.ahamed10@gmail.com"}]
dependencies = [
    "awscli>=1.45.32",
    "boto3>=1.43.32",
    "fastapi>=0.137.2",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=70.0.0",
    "uvicorn>=0.49.0",
    "wordcloud>=1.9.6",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]        # look in current folder
include = ["src*"]   # include src/ and all its subfolders
